Another overflow fix added

--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ main {
   align-items: center;
   height: 100vh;
   width: 100vw;
+  max-width: 100%;
   background: url("../images/bg-pattern-top.svg") no-repeat, url("../images/bg-pattern-bottom.svg") no-repeat, #19a2ae;
   background-position: top -300px left -380px, bottom -380px right -380px;
   background-size: 600px;
